# mcp794xx-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: battery_power.rs  eeprom.rs  interface.rs  lib.rs  types.rs
src/common/: alarm.rs  conversion.rs  datetime.rs  mod.rs  sram.rs
tests/: alarms.rs  battery_power.rs  configuration.rs  datetime.rs  eeprom.rs  protected_eeprom.rs  sram.rs  status.rs
tests/common/: mod.rs
