[package]
name = "mcp794xx"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp794xx-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP794xx real-time clock / calendar (RTC) family."
readme = "README.md"
keywords = ["rtc", "clock", "real-time", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp794xx-rs"
documentation = "https://docs.rs/mcp794xx"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/mcp794xx-rs", branch = "master" }
coveralls = { repository = "eldruin/mcp794xx-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
