[package]
name = "mcp794xx"
version = "0.2.1" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp794xx-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP794xx real-time clock / calendar (RTC) family. Compatible with MCP7940N, MCP7940M, MCP79400, MCP79401, MCP79402, MCP79410, MCP79411 and MCP79412."
readme = "README.md"
keywords = ["rtc", "clock", "real-time", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp794xx-rs"
documentation = "https://docs.rs/mcp794xx"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
rtcc = "0.3"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[profile.release]
lto = true
